# capstone_project

./: .gitignore  CHANGE_ANALYSIS_REPORT.md  LLM_NEWS_USAGE.md  NEWS_COLLECTION_FLOW.md  NEWS_DATA_USAGE.md  README.md  clean_file.py  compare_opinion_with_without_ctx.py  debate.py  debate_agent.py  env_example.txt  example_ml_integration.py  fundamental_agent.py  macro_test.ipynb  main.py  mlp_stock_model.pt  model_lstm_bothsentiment_V2.pt  model_lstm_stocksentiment.pt  news_data.csv  processed_data_with_both_sentiment_V2.csv  prompts.py  pyproject.toml  requirements.txt  reviwer_draft.py  run_debate_pipeline.py  scaler_x.pkl  scaler_x_both_V2.pkl  scaler_y.pkl  scaler_y_both_V2.pkl  stock_data.csv  streamlit_dashboard.py  technical_test.ipynb  technical_test_1102.ipynb  test.ipynb  test_debate_nvda.py  test_import.py  test_news_collection.py  test_sentimental_pipeline.ipynb  train_sentimental.py  ver6.py  (+4 more)
agents/: 251005.ipynb  @dataclass.json  base_agent.py  base_jan2025_visual.ipynb  base_model.py  debate_agent.py  event_agent.py  for_model.py  fun_sub.py  fundamental_agent.py  fundamental_agent_with_alpha_transformer.py  fundamental_agent_with_shap_llm.py  fundamental_modules.py  fundamental_reviewer.py  fundamental_sub.py  m_agent.py  macro_agent.py  macro_agent_with_alpha_transformer.py  macro_agent_with_shap_llm.py  macro_llm.py  macro_shap_llm.py  macro_sub.py  marketdataagent.py  news_data.csv  news_data_searcher.ipynb  pushed) sentimental_predictor.ipynb  sentimental_agent.py  sentimental_modules.py  sentimental_predictor.py  sentimental_predictor_3ent.py  (+11 more)
(+336 files in other folders)
